# language-det

./: .gitignore  CMakeLists.txt  README.md  main.cpp  setup.py
pybind11/tools/: FindCatch.cmake  pybind11NewTools.cmake  pybind11Tools.cmake
